--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://harshil-guptha.github.io/ludobotics",
+  "homepage": "https://ludobotics.github.io/website",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
